--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ before_install:
 script:
   - docker run -e CI=true clovethrowd916/docker-react npm run test
 language: generic
+
+deploy:
+  provider: azure_web_apps
