--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,18 @@ before_install:
 
 script:
   - docker run -e CI=true clovethrowd916/docker-react npm run test
+
 language: generic
 
 deploy:
-  provider: azure_web_apps
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "docker"
+  env: "Docker-env"
+  bucket_name: "elasticbeanstalk-us-east-2-393796479224"
+  bucket_path: "docker"
+  on:
+    branch: master
+access_key_id: $AWS_ACCESS_KEY
+secret_access_key:
+  secure: "$AWS_SECRET_KEY"
